@@ -27,137 +27,127 @@ package com.questhelper.helpers.quests.merlinscrystal;
 import com.questhelper.bank.banktab.BankSlotIcons;
 import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
-import com.questhelper.requirements.Requirement;
 import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.conditional.NpcCondition;
 import com.questhelper.requirements.conditional.ObjectCondition;
 import com.questhelper.requirements.item.ItemRequirement;
 import com.questhelper.requirements.npc.DialogRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
+import static com.questhelper.requirements.util.LogicHelper.not;
 import com.questhelper.requirements.util.LogicType;
 import com.questhelper.requirements.widget.WidgetTextRequirement;
 import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.QuestPointReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.ItemStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
 
-import java.util.*;
-
 public class MerlinsCrystal extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement bread, tinderbox, bucketOfWax, batBones, combatGear, bucket, repellent, blackCandle,
-		litBlackCandle, excalibur, batBonesOptional, bucketOfWaxOptional, equippedExcalibur;
+	// Required items
+	ItemRequirement bread;
+	ItemRequirement tinderbox;
+	ItemRequirement bucketOfWax;
+	ItemRequirement batBones;
+	ItemRequirement combatGear;
 
-	//Items Recommended
-	ItemRequirement varrockTeleport, camelotTeleport, twoFaladorTeleports;
+	// Recommended items
+	ItemRequirement varrockTeleport;
+	ItemRequirement camelotTeleport;
+	ItemRequirement twoFaladorTeleports;
 
-	Requirement inFaye, inFayeGround, inFaye1, inFaye2, inCamelot1, inCamelot2, morganNearby, clearedHive,
-		hasAnyBlackCandle, beggarNearby, talkedToLady, hasReadSpell, inCamelot, inStar, thrantaxNearby, inCamelotTower1, inCamelotTower2;
+	// Mid-quest item requirements
+	ItemRequirement bucket;
+	ItemRequirement repellent;
+	ItemRequirement blackCandle;
+	ItemRequirement litBlackCandle;
+	ItemRequirement anyBlackCandle;
+	ItemRequirement excalibur;
+	ItemRequirement excaliburEquipped;
 
-	QuestStep startQuest, talkToGawain, goUpstairsInCamelot, talkToLancelot, goBackDownStairsCamelot, hideInArheinCrate, goToFirstFloor, goToSecondFloor,
-		attackMordred, talkToMorgan, goToCatherbyAfterFortress, optionalGetRepellent, optionalGetBucket, optionalUseRepellent, talkToCandleMaker, talkToLadyOfLake,
-		enterSarimShopAndTalk, talkToBeggar, goReadMagicWords, returnToCamelot, returnToCamelotLit, goStandInStar, lightCandle, dropBatBones, sayWords,
-		goUpLadder1Camelot, goUpLadder2Camelot, smashCrystal, goDownLadder1Camelot, goDownLadder2Camelot, finishQuest;
+	// Zones
+	Zone fayeGround;
+	Zone faye1;
+	Zone faye2;
+	Zone camelotGround1;
+	Zone camelotGround2;
+	Zone camelotGround3;
+	Zone camelot1;
+	Zone camelot2;
+	Zone star;
+	Zone camelotTower1;
+	Zone camelotTower2;
 
-	ConditionalStep getBlackCandle, getExcalibur;
+	// Miscellaneous requirements
+	ZoneRequirement inFaye;
+	ZoneRequirement inFayeGround;
+	ZoneRequirement inFaye1;
+	ZoneRequirement inFaye2;
+	ZoneRequirement inCamelot1;
+	ZoneRequirement inCamelot2;
+	ZoneRequirement inCamelot;
+	ZoneRequirement inStar;
+	ZoneRequirement inCamelotTower1;
+	ZoneRequirement inCamelotTower2;
 
-	//Zones
-	Zone fayeGround, faye1, faye2, camelotGround1, camelotGround2, camelotGround3, camelot1, camelot2, star, camelotTower1, camelotTower2;
+	NpcCondition morganNearby;
+	ObjectCondition clearedHive;
+	NpcCondition beggarNearby;
+	Conditions talkedToLady;
+	Conditions hasReadSpell;
+	NpcCondition thrantaxNearby;
 
-	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
+	// Steps
+	NpcStep startQuest;
+	NpcStep talkToGawain;
+	ObjectStep goUpstairsInCamelot;
+	NpcStep talkToLancelot;
+	ObjectStep goBackDownStairsCamelot;
+	ObjectStep hideInArheinCrate;
+	ObjectStep goToFirstFloor;
+	ObjectStep goToSecondFloor;
+	NpcStep attackMordred;
+	DetailedQuestStep talkToMorgan;
+	DetailedQuestStep goToCatherbyAfterFortress;
+	DetailedQuestStep optionalGetRepellent;
+	ItemStep optionalGetBucket;
+	ObjectStep optionalUseRepellent;
+	NpcStep talkToCandleMaker;
+	NpcStep talkToLadyOfLake;
+	ObjectStep enterSarimShopAndTalk;
+	NpcStep talkToBeggar;
+	ObjectStep goReadMagicWords;
+	ObjectStep returnToCamelot;
+	DetailedQuestStep goStandInStar;
+	DetailedQuestStep lightCandle;
+	DetailedQuestStep dropBatBones;
+	DetailedQuestStep sayWords;
+	ObjectStep goUpLadder1Camelot;
+	ObjectStep goUpLadder2Camelot;
+	ObjectStep smashCrystal;
+	ObjectStep goDownLadder1Camelot;
+	ObjectStep goDownLadder2Camelot;
+	NpcStep finishQuest;
 
-		steps.put(0, startQuest);
-		steps.put(1, talkToGawain);
-
-		ConditionalStep findLancelot = new ConditionalStep(this, goUpstairsInCamelot);
-		findLancelot.addStep(inCamelot1, talkToLancelot);
-
-		steps.put(2, findLancelot);
-
-		ConditionalStep discoverHowToFreeMerlin = new ConditionalStep(this, hideInArheinCrate);
-		discoverHowToFreeMerlin.addStep(new Conditions(inFaye2, morganNearby), talkToMorgan);
-		discoverHowToFreeMerlin.addStep(inFaye2, attackMordred);
-		discoverHowToFreeMerlin.addStep(inFaye1, goToSecondFloor);
-		discoverHowToFreeMerlin.addStep(inFayeGround, goToFirstFloor);
-		discoverHowToFreeMerlin.addStep(inCamelot1, goBackDownStairsCamelot);
-
-		steps.put(3, discoverHowToFreeMerlin);
-
-		getBlackCandle = new ConditionalStep(this, optionalGetRepellent);
-		getBlackCandle.addStep(inFaye, goToCatherbyAfterFortress);
-		getBlackCandle.addStep(bucketOfWax, talkToCandleMaker);
-		getBlackCandle.addStep(new Conditions(repellent, bucket), optionalUseRepellent);
-		getBlackCandle.addStep(repellent, optionalGetBucket);
-		getBlackCandle.setLockingCondition(hasAnyBlackCandle);
-
-		getExcalibur = new ConditionalStep(this, talkToLadyOfLake);
-		getExcalibur.addStep(beggarNearby, talkToBeggar);
-		getExcalibur.addStep(talkedToLady, enterSarimShopAndTalk);
-		getExcalibur.setLockingCondition(excalibur);
-
-		ConditionalStep performSpell = new ConditionalStep(this, returnToCamelot);
-		performSpell.addStep(thrantaxNearby, sayWords);
-		performSpell.addStep(new Conditions(inStar, litBlackCandle), dropBatBones);
-		performSpell.addStep(inStar, lightCandle);
-		performSpell.addStep(inCamelot, goStandInStar);
-		performSpell.addStep(litBlackCandle, returnToCamelotLit);
-
-		ConditionalStep completeAllTasks = new ConditionalStep(this, getBlackCandle);
-		completeAllTasks.addStep(new Conditions(hasAnyBlackCandle, excalibur, hasReadSpell), performSpell);
-		completeAllTasks.addStep(new Conditions(hasAnyBlackCandle, excalibur), goReadMagicWords);
-		completeAllTasks.addStep(hasAnyBlackCandle, getExcalibur);
-
-		steps.put(4, completeAllTasks);
-
-		ConditionalStep goFreeMerlin = new ConditionalStep(this, goUpLadder1Camelot);
-		goFreeMerlin.addStep(inCamelotTower2, smashCrystal);
-		goFreeMerlin.addStep(inCamelotTower1, goUpLadder2Camelot);
-
-		steps.put(5, goFreeMerlin);
-
-		ConditionalStep goTellArthur = new ConditionalStep(this, finishQuest);
-		goTellArthur.addStep(inCamelotTower1, goDownLadder1Camelot);
-		goTellArthur.addStep(inCamelotTower2, goDownLadder2Camelot);
-
-		steps.put(6, goTellArthur);
-
-		return steps;
-	}
-
-	@Override
-	protected void setupRequirements()
-	{
-		bread = new ItemRequirement("Bread", ItemID.BREAD);
-		tinderbox = new ItemRequirement("Tinderbox", ItemID.TINDERBOX).isNotConsumed();
-		bucketOfWaxOptional = new ItemRequirement("Bucket of wax", ItemID.BUCKET_WAX);
-		bucketOfWaxOptional.canBeObtainedDuringQuest();
-		bucketOfWax = new ItemRequirement("Bucket of wax", ItemID.BUCKET_WAX);
-		batBones = new ItemRequirement("Bat bones", ItemID.BAT_BONES);
-		batBonesOptional = new ItemRequirement("Bat bones", ItemID.BAT_BONES);
-		batBonesOptional.canBeObtainedDuringQuest();
-		varrockTeleport = new ItemRequirement("Teleport to Varrock", ItemID.POH_TABLET_VARROCKTELEPORT);
-		camelotTeleport = new ItemRequirement("Teleport to Camelot", ItemID.POH_TABLET_CAMELOTTELEPORT);
-		twoFaladorTeleports = new ItemRequirement("Teleports to Falador", ItemID.POH_TABLET_FALADORTELEPORT, 2);
-		combatGear = new ItemRequirement("Combat gear + food for Sir Mordred (level 39)", -1, -1).isNotConsumed();
-		combatGear.setDisplayItemId(BankSlotIcons.getCombatGear());
-		bucket = new ItemRequirement("Bucket", ItemID.BUCKET_EMPTY);
-		repellent = new ItemRequirement("Insect repellent", ItemID.INSECT_REPELLENT).isNotConsumed();
-		blackCandle = new ItemRequirement("Black candle", ItemID.UNLIT_BLACK_CANDLE);
-		litBlackCandle = new ItemRequirement("Lit black candle", ItemID.LIT_BLACK_CANDLE);
-		excalibur = new ItemRequirement("Excalibur", ItemID.EXCALIBUR).isNotConsumed();
-		equippedExcalibur = excalibur.equipped();
-	}
+	ConditionalStep cGetBatBones;
+	ConditionalStep getBlackCandle;
+	ConditionalStep getExcalibur;
+	NpcStep getBatBones;
+	ObjectStep climbDownFaye2;
+	ObjectStep climbDownFaye1;
 
 	@Override
 	protected void setupZones()
@@ -175,8 +165,28 @@ public class MerlinsCrystal extends BasicQuestHelper
 		camelotTower2 = new Zone(new WorldPoint(2765, 3490, 2), new WorldPoint(2770, 3494, 2));
 	}
 
-	public void setupConditions()
+	@Override
+	protected void setupRequirements()
 	{
+		bread = new ItemRequirement("Bread", ItemID.BREAD);
+		tinderbox = new ItemRequirement("Tinderbox", ItemID.TINDERBOX).isNotConsumed();
+		bucketOfWax = new ItemRequirement("Bucket of wax", ItemID.BUCKET_WAX).canBeObtainedDuringQuest();
+		batBones = new ItemRequirement("Bat bones", ItemID.BAT_BONES).canBeObtainedDuringQuest();
+		combatGear = new ItemRequirement("Combat gear + food for Sir Mordred (level 39)", -1, -1).isNotConsumed();
+		combatGear.setDisplayItemId(BankSlotIcons.getCombatGear());
+
+		varrockTeleport = new ItemRequirement("Teleport to Varrock", ItemID.POH_TABLET_VARROCKTELEPORT);
+		camelotTeleport = new ItemRequirement("Teleport to Camelot", ItemID.POH_TABLET_CAMELOTTELEPORT);
+		twoFaladorTeleports = new ItemRequirement("Teleports to Falador", ItemID.POH_TABLET_FALADORTELEPORT, 2);
+
+		bucket = new ItemRequirement("Bucket", ItemID.BUCKET_EMPTY);
+		repellent = new ItemRequirement("Insect repellent", ItemID.INSECT_REPELLENT).isNotConsumed();
+		blackCandle = new ItemRequirement("Black candle", ItemID.UNLIT_BLACK_CANDLE);
+		litBlackCandle = new ItemRequirement("Lit black candle", ItemID.LIT_BLACK_CANDLE);
+		anyBlackCandle = new ItemRequirement("Black candle", List.of(ItemID.UNLIT_BLACK_CANDLE, ItemID.LIT_BLACK_CANDLE));
+		excalibur = new ItemRequirement("Excalibur", ItemID.EXCALIBUR).isNotConsumed();
+		excaliburEquipped = excalibur.equipped().highlighted();
+
 		inFaye = new ZoneRequirement(faye1, fayeGround, faye2);
 		inFayeGround = new ZoneRequirement(fayeGround);
 		inFaye1 = new ZoneRequirement(faye1);
@@ -184,16 +194,16 @@ public class MerlinsCrystal extends BasicQuestHelper
 		inCamelot = new ZoneRequirement(camelotGround1, camelotGround2, camelotGround3);
 		inCamelot1 = new ZoneRequirement(camelot1);
 		inCamelot2 = new ZoneRequirement(camelot2);
-		morganNearby = new NpcCondition(NpcID.MORGAN_LE_FAYE);
-		clearedHive = new ObjectCondition(ObjectID.BEEHIVE);
-		hasAnyBlackCandle = new Conditions(LogicType.OR, blackCandle, litBlackCandle);
-		beggarNearby = new NpcCondition(NpcID.LAKE_BEGGAR);
-		talkedToLady = new Conditions(true, new DialogRequirement(questHelperPlugin.getPlayerStateManager().getPlayerName(), "Ok. That seems easy enough.", false));
-		hasReadSpell = new Conditions(true, LogicType.AND, new WidgetTextRequirement(229, 1, "You find a small inscription"));
 		inStar = new ZoneRequirement(star);
-		thrantaxNearby = new NpcCondition(NpcID.THRANTAX);
 		inCamelotTower1 = new ZoneRequirement(camelotTower1);
 		inCamelotTower2 = new ZoneRequirement(camelotTower2);
+
+		morganNearby = new NpcCondition(NpcID.MORGAN_LE_FAYE);
+		clearedHive = new ObjectCondition(ObjectID.BEEHIVE);
+		beggarNearby = new NpcCondition(NpcID.LAKE_BEGGAR);
+		talkedToLady = new Conditions(true, new DialogRequirement(questHelperPlugin.getPlayerStateManager().getPlayerName(), "Ok. That seems easy enough.", false));
+		hasReadSpell = new Conditions(true, LogicType.AND, WidgetTextRequirement.messageBox("You find a small inscription"));
+		thrantaxNearby = new NpcCondition(NpcID.THRANTAX);
 	}
 
 	public void setupSteps()
@@ -225,30 +235,38 @@ public class MerlinsCrystal extends BasicQuestHelper
 		talkToMorgan.addDialogStep("Tell me how to untrap Merlin and I might.");
 		talkToMorgan.addDialogStep("Ok I will do all that.");
 
-		goToCatherbyAfterFortress = new DetailedQuestStep(this, "Return to Catherby. If you still need bat bones, you can kill one of the bats just outside the fortress.");
+		getBatBones = new NpcStep(this, NpcID.BAT, new WorldPoint(2757, 3401, 0), "Kill a Giant bat outside Keep Le Faye for some bat bones.", true, batBones);
+		climbDownFaye2 = new ObjectStep(this, ObjectID.STAIRSTOP, new WorldPoint(2769, 3399, 2), "Climb down from Keep Le Faye and step through the front door, then kill a Giant bat for some bat bones.");
+		climbDownFaye1 = new ObjectStep(this, ObjectID.STAIRSTOP, new WorldPoint(2769, 3405, 1), "Climb down from Keep Le Faye and step through the front door, then kill a Giant bat for some bat bones.");
+		climbDownFaye2.addSubSteps(climbDownFaye1);
+
+		goToCatherbyAfterFortress = new DetailedQuestStep(this, "Return to Catherby.");
 		optionalGetRepellent = new DetailedQuestStep(this, new WorldPoint(2807, 3450, 0), "If you still need wax, go grab the insect repellent in a house in north Catherby. Otherwise, get your wax out.", repellent);
-		optionalGetBucket = new DetailedQuestStep(this, new WorldPoint(2766, 3441, 0), "Go grab the bucket in the bee field west of Catherby.", bucket);
+		optionalGetBucket = new ItemStep(this, new WorldPoint(2766, 3441, 0), "Go grab the bucket in the bee field west of Catherby.", bucket);
 
 		optionalUseRepellent = new ObjectStep(this, ObjectID.MERLIN_BEEHIVE, new WorldPoint(2762, 3443, 0), "Use the insect repellent on a bee hive, then try to take some wax.", bucket, repellent.highlighted());
 		talkToCandleMaker = new NpcStep(this, NpcID.CANDLE_MAKER, new WorldPoint(2797, 3440, 0), "Talk to the Candle Maker in Catherby twice until he gives you a black candle.", bucketOfWax);
 		talkToCandleMaker.addDialogStep("Have you got any black candles?");
 
 		talkToLadyOfLake = new NpcStep(this, NpcID.LADYOFTHELAKE, new WorldPoint(2924, 3404, 0), "Talk to the Lady of the Lake in Taverley.");
+		talkToLadyOfLake.addTeleport(twoFaladorTeleports.quantity(1));
 		talkToLadyOfLake.addDialogStep("I seek the sword Excalibur.");
 		talkToLadyOfLake.setLockingCondition(talkedToLady);
 
 		enterSarimShopAndTalk = new ObjectStep(this, ObjectID.JEWELLERSDOOR, new WorldPoint(3016, 3246, 0), "Attempt to enter the jewelery store in Port Sarim.", bread);
 		enterSarimShopAndTalk.addDialogStep("Yes certainly.");
-		talkToBeggar = new ObjectStep(this, ObjectID.JEWELLERSDOOR, new WorldPoint(3016, 3246, 0), "Talk to the beggar who appears and give him some bread.", bread);
+		enterSarimShopAndTalk.addDialogStep("Yes, here you go.");
+		talkToBeggar = new NpcStep(this, NpcID.LAKE_BEGGAR, new WorldPoint(3016, 3247, 0), "Talk to the beggar who appears and give him some bread.", bread);
 		talkToBeggar.addDialogStep("Yes certainly.");
+		talkToBeggar.addDialogStep("Yes, here you go.");
 
 		goReadMagicWords = new ObjectStep(this, ObjectID.THRANTAXALTAR, new WorldPoint(3260, 3381, 0), "Check the altar in the Zamorak Temple in south east Varrock. If you've already learnt the spell, just mark this step complete in the Quest Helper sidebar.");
+		goReadMagicWords.addTeleport(varrockTeleport);
 		goReadMagicWords.setLockingCondition(hasReadSpell);
 
-		returnToCamelot = new ObjectStep(this, ObjectID.KR_CAMELOT_METALGATECLOSEDR, new WorldPoint(2758, 3482, 0), "Return to Camelot", excalibur, blackCandle, batBones, tinderbox);
-		returnToCamelotLit = new ObjectStep(this, ObjectID.KR_CAMELOT_METALGATECLOSEDR, new WorldPoint(2758, 3482, 0), "Return to Camelot", excalibur, litBlackCandle, batBones);
+		returnToCamelot = new ObjectStep(this, ObjectID.KR_CAMELOT_METALGATECLOSEDR, new WorldPoint(2758, 3482, 0), "Enter the gates towards Camelot Castle.", excalibur, anyBlackCandle, batBones, tinderbox);
 
-		goStandInStar = new DetailedQuestStep(this, new WorldPoint(2780, 3515, 0), "Go stand in the star symbol north east of Camelot Castle.");
+		goStandInStar = new DetailedQuestStep(this, new WorldPoint(2780, 3515, 0), "Go stand in the star symbol north east of Camelot Castle.", excalibur, anyBlackCandle, batBones, tinderbox);
 		goStandInStar.addDialogStep("Snarthon Candtrick Termanto");
 
 		lightCandle = new DetailedQuestStep(this, "Light the Black candle with your tinderbox.", blackCandle.highlighted(), tinderbox.highlighted());
@@ -257,10 +275,10 @@ public class MerlinsCrystal extends BasicQuestHelper
 		sayWords = new DetailedQuestStep(this, "Say the spell 'Snarthon Candtrick Termanto'. Be careful not to click the wrong option or you'll have to get another Black Candle.", excalibur);
 		sayWords.addDialogStep("Snarthon Candtrick Termanto");
 
-		goUpLadder1Camelot = new ObjectStep(this, ObjectID.KR_CAM_LADDER, new WorldPoint(2769, 3493, 0), "Go up the ladder in the south east of Camelot castle.", equippedExcalibur);
-		goUpLadder2Camelot = new ObjectStep(this, ObjectID.KR_CAM_LADDER, new WorldPoint(2767, 3491, 1), "Go up the next ladder.", equippedExcalibur);
+		goUpLadder1Camelot = new ObjectStep(this, ObjectID.KR_CAM_LADDER, new WorldPoint(2769, 3493, 0), "Go up the ladder in the south east of Camelot castle.", excaliburEquipped);
+		goUpLadder2Camelot = new ObjectStep(this, ObjectID.KR_CAM_LADDER, new WorldPoint(2767, 3491, 1), "Go up the next ladder.", excaliburEquipped);
 
-		smashCrystal = new ObjectStep(this, ObjectID.MERLINS_CRYSTAL, new WorldPoint(2768, 3494, 2), "Smash the Giant Crystal with Excalibur equipped.", equippedExcalibur);
+		smashCrystal = new ObjectStep(this, ObjectID.MERLINS_CRYSTAL, new WorldPoint(2768, 3494, 2), "Smash the Giant Crystal with Excalibur equipped.", excaliburEquipped);
 
 		goDownLadder1Camelot = new ObjectStep(this, ObjectID.KR_CAM_LADDERTOP, new WorldPoint(2769, 3493, 1), "Tell King Arthur you've freed Merlin.");
 		goDownLadder2Camelot = new ObjectStep(this, ObjectID.KR_CAM_LADDERTOP, new WorldPoint(2767, 3491, 2), "Tell King Arthur you've freed Merlin.");
@@ -270,33 +288,104 @@ public class MerlinsCrystal extends BasicQuestHelper
 	}
 
 	@Override
-	public List<String> getCombatRequirements()
+	public Map<Integer, QuestStep> loadSteps()
 	{
-		ArrayList<String> reqs = new ArrayList<>();
-		reqs.add("Sir Mordred (level 39)");
-		return reqs;
+		initializeRequirements();
+		setupSteps();
+
+		var steps = new HashMap<Integer, QuestStep>();
+
+		steps.put(0, startQuest);
+		steps.put(1, talkToGawain);
+
+		var findLancelot = new ConditionalStep(this, goUpstairsInCamelot);
+		findLancelot.addStep(inCamelot1, talkToLancelot);
+
+		steps.put(2, findLancelot);
+
+		var discoverHowToFreeMerlin = new ConditionalStep(this, hideInArheinCrate);
+		discoverHowToFreeMerlin.addStep(and(inFaye2, morganNearby), talkToMorgan);
+		discoverHowToFreeMerlin.addStep(inFaye2, attackMordred);
+		discoverHowToFreeMerlin.addStep(inFaye1, goToSecondFloor);
+		discoverHowToFreeMerlin.addStep(inFayeGround, goToFirstFloor);
+		discoverHowToFreeMerlin.addStep(inCamelot1, goBackDownStairsCamelot);
+
+		steps.put(3, discoverHowToFreeMerlin);
+
+		cGetBatBones = new ConditionalStep(this, getBatBones);
+		cGetBatBones.addStep(inFaye2, climbDownFaye2);
+		cGetBatBones.addStep(inFaye1, climbDownFaye1);
+		cGetBatBones.setLockingCondition(batBones);
+
+		getBlackCandle = new ConditionalStep(this, optionalGetRepellent);
+		getBlackCandle.addStep(inFaye, goToCatherbyAfterFortress);
+		getBlackCandle.addStep(bucketOfWax, talkToCandleMaker);
+		getBlackCandle.addStep(and(repellent, bucket), optionalUseRepellent);
+		getBlackCandle.addStep(repellent, optionalGetBucket);
+		getBlackCandle.setLockingCondition(anyBlackCandle);
+
+		getExcalibur = new ConditionalStep(this, talkToLadyOfLake);
+		getExcalibur.addStep(beggarNearby, talkToBeggar);
+		getExcalibur.addStep(talkedToLady, enterSarimShopAndTalk);
+		getExcalibur.setLockingCondition(excalibur);
+
+		var performSpell = new ConditionalStep(this, returnToCamelot);
+		performSpell.addStep(thrantaxNearby, sayWords);
+		performSpell.addStep(and(inStar, litBlackCandle), dropBatBones);
+		performSpell.addStep(inStar, lightCandle);
+		performSpell.addStep(inCamelot, goStandInStar);
+
+		var completeAllTasks = new ConditionalStep(this, getBlackCandle);
+		completeAllTasks.addStep(not(batBones), cGetBatBones);
+		completeAllTasks.addStep(and(anyBlackCandle, excalibur, hasReadSpell), performSpell);
+		completeAllTasks.addStep(and(anyBlackCandle, excalibur), goReadMagicWords);
+		completeAllTasks.addStep(anyBlackCandle, getExcalibur);
+
+		steps.put(4, completeAllTasks);
+
+		var goFreeMerlin = new ConditionalStep(this, goUpLadder1Camelot);
+		goFreeMerlin.addStep(inCamelotTower2, smashCrystal);
+		goFreeMerlin.addStep(inCamelotTower1, goUpLadder2Camelot);
+
+		steps.put(5, goFreeMerlin);
+
+		var goTellArthur = new ConditionalStep(this, finishQuest);
+		goTellArthur.addStep(inCamelotTower1, goDownLadder1Camelot);
+		goTellArthur.addStep(inCamelotTower2, goDownLadder2Camelot);
+
+		steps.put(6, goTellArthur);
+
+		return steps;
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(combatGear);
-		reqs.add(bread);
-		reqs.add(tinderbox);
-		reqs.add(bucketOfWaxOptional);
-		reqs.add(batBonesOptional);
-		return reqs;
+		return List.of(
+			combatGear,
+			bread,
+			tinderbox,
+			bucketOfWax,
+			batBones
+		);
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRecommended()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(varrockTeleport);
-		reqs.add(camelotTeleport);
-		reqs.add(twoFaladorTeleports);
-		return reqs;
+		return List.of(
+			varrockTeleport,
+			camelotTeleport,
+			twoFaladorTeleports
+		);
+	}
+
+	@Override
+	public List<String> getCombatRequirements()
+	{
+		return List.of(
+			"Sir Mordred (level 39)"
+		);
 	}
 
 	@Override
@@ -308,43 +397,94 @@ public class MerlinsCrystal extends BasicQuestHelper
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Collections.singletonList(new ItemReward("Excalibur", ItemID.EXCALIBUR, 1));
+		return List.of(
+			new ItemReward("Excalibur", ItemID.EXCALIBUR, 1)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
-		allSteps.add(new PanelDetails("Starting off", Arrays.asList(startQuest, talkToGawain, goUpstairsInCamelot, talkToLancelot)));
-		allSteps.add(new PanelDetails("Infiltrate the fortress", Arrays.asList(hideInArheinCrate, goToFirstFloor, goToSecondFloor, attackMordred, talkToMorgan), combatGear));
-		PanelDetails getBlackCandlePanel = new PanelDetails("Get a Black Candle",
-			Arrays.asList(goToCatherbyAfterFortress, optionalGetRepellent, optionalGetBucket, optionalUseRepellent, talkToCandleMaker));
+		var sections = new ArrayList<PanelDetails>();
+
+		sections.add(new PanelDetails("Starting off", List.of(
+			startQuest,
+			talkToGawain,
+			goUpstairsInCamelot,
+			talkToLancelot
+		)));
+
+		sections.add(new PanelDetails("Infiltrate the fortress", List.of(
+			hideInArheinCrate,
+			goToFirstFloor,
+			goToSecondFloor,
+			attackMordred,
+			talkToMorgan
+		), List.of(
+			combatGear
+		)));
+
+		var getBatBonesPanel = new PanelDetails("Get bat bones", List.of(
+			climbDownFaye2,
+			getBatBones
+		));
+		getBatBonesPanel.setLockingStep(cGetBatBones);
+		getBatBonesPanel.setVars(4);
+
+		sections.add(getBatBonesPanel);
+
+		var getBlackCandlePanel = new PanelDetails("Get a Black Candle", List.of(
+			goToCatherbyAfterFortress,
+			optionalGetRepellent,
+			optionalGetBucket,
+			optionalUseRepellent,
+			talkToCandleMaker
+		));
 		getBlackCandlePanel.setLockingStep(getBlackCandle);
 		getBlackCandlePanel.setVars(4);
 
-		allSteps.add(getBlackCandlePanel);
+		sections.add(getBlackCandlePanel);
 
-		PanelDetails getExcaliburPanel = new PanelDetails("Get Excalibur",
-			Arrays.asList(talkToLadyOfLake, enterSarimShopAndTalk, talkToBeggar), bread);
+		var getExcaliburPanel = new PanelDetails("Get Excalibur", List.of(
+			talkToLadyOfLake,
+			enterSarimShopAndTalk,
+			talkToBeggar
+		), List.of(
+			bread
+		));
 		getExcaliburPanel.setLockingStep(getExcalibur);
 		getExcaliburPanel.setVars(4);
 
-		allSteps.add(getExcaliburPanel);
+		sections.add(getExcaliburPanel);
 
-		PanelDetails readMagicWordsPanel = new PanelDetails("Learn magic words",
-			Collections.singletonList(goReadMagicWords));
+		var readMagicWordsPanel = new PanelDetails("Learn magic words", List.of(
+			goReadMagicWords
+		));
 		readMagicWordsPanel.setLockingStep(goReadMagicWords);
 		readMagicWordsPanel.setVars(4);
 
-		allSteps.add(readMagicWordsPanel);
+		sections.add(readMagicWordsPanel);
 
-		PanelDetails performMagicPanel = new PanelDetails("Perform the spell",
-			Arrays.asList(returnToCamelot, goStandInStar, lightCandle, dropBatBones, sayWords), blackCandle, batBones, excalibur, tinderbox);
+		sections.add(new PanelDetails("Perform the spell", List.of(
+			returnToCamelot,
+			goStandInStar,
+			lightCandle,
+			dropBatBones,
+			sayWords
+		), List.of(
+			anyBlackCandle,
+			batBones,
+			excalibur,
+			tinderbox
+		)));
 
-		allSteps.add(performMagicPanel);
+		sections.add(new PanelDetails("Free Merlin", List.of(
+			goUpLadder1Camelot,
+			goUpLadder2Camelot,
+			smashCrystal,
+			finishQuest
+		)));
 
-		allSteps.add(new PanelDetails("Free Merlin", Arrays.asList(goUpLadder1Camelot, goUpLadder2Camelot, smashCrystal, finishQuest)));
-
-		return allSteps;
+		return sections;
 	}
 }
